--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">Logcat.2.3.1</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Lifecycle.2.4.2</string>
 </resources>
