--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,3 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="title">Решить уравнение a*x-b=c</string>
-    <string name="a">Введите A</string>
-    <string name="b">Введите B</string>
-    <string name="c">Введите C</string>
-    <string name="calculate">Вычислить</string>
+    <string name="app_name">Layouts</string>
 </resources>
